samples/bak/samples-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
    protocol: TCP
  selector:
    app: client
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  ports:
  - port: 8083
    name: http
    targetPort: 8080
    protocol: TCP
  selector:
    app: tomcat
---
apiVersion: v1
kind: Service
metadata:
  name: firefix
  labels:
    app: firefix
spec:
  ports:
  - port: 5900
    name: http
    targetPort: 5800
    protocol: TCP
  selector:
    app: firefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: test
        image: busybox
        imagePullPolicy: IfNotPresent
        command: ["bin/sh","-c","echo 'hello httpd' > /var/www/index.html; httpd -f -p 8080 -h /var/www/"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tamcat
        image: docker.io/kubeguide/tomcat-app:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefix
  labels:
    app: firefix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefix
  template:
    metadata:
      labels:
        app: firefix
    spec:
      containers:
      - name: firefix
        image: swr.cn-north-1.myhuaweicloud.com/iivey/firefox:v1.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "2G"
            cpu: "200m"
          limits:
            memory: "2G"
            cpu: "200m"
        ports:
        - containerPort: 5800
